# docs/swagger.json
@@ -2211,25 +2211,6 @@
         "responses": {}
       }
     },
-    "/settings/git_apps/bitbucket/{id}": {
-      "delete": {
-        "description": "DeleteBitbucketApp endpoint",
-        "consumes": ["application/json"],
-        "produces": ["application/json"],
-        "tags": ["Settings"],
-        "summary": "DeleteBitbucketApp endpoint",
-        "parameters": [
-          {
-            "type": "string",
-            "description": "id",
-            "name": "id",
-            "in": "path",
-            "required": true
-          }
-        ],
-        "responses": {}
-      }
-    },
     "/settings/git_apps/github/manifest-callback": {
       "post": {
         "description": "ExchangeGithubManifestCode endpoint",
@@ -2308,84 +2289,6 @@
         "produces": ["application/json"],
         "tags": ["Settings"],
         "summary": "DeployUpdate endpoint",
-        "responses": {}
-      }
-    },
-    "/storage": {
-      "post": {
-        "description": "CreateStorage endpoint",
-        "consumes": ["application/json"],
-        "produces": ["application/json"],
-        "tags": ["Storage"],
-        "summary": "CreateStorage endpoint",
-        "parameters": [
-          {
-            "description": "Payload",
-            "name": "request",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/models.Storage"
-            }
-          }
-        ],
-        "responses": {}
-      }
-    },
-    "/storage/{id}": {
-      "get": {
-        "description": "GetStorage endpoint",
-        "consumes": ["application/json"],
-        "produces": ["application/json"],
-        "tags": ["Storage"],
-        "summary": "GetStorage endpoint",
-        "parameters": [
-          {
-            "type": "string",
-            "description": "id",
-            "name": "id",
-            "in": "path",
-            "required": true
-          }
-        ],
-        "responses": {}
-      }
-    },
-    "/storage/{id}/start": {
-      "post": {
-        "description": "StartStorage endpoint",
-        "consumes": ["application/json"],
-        "produces": ["application/json"],
-        "tags": ["Storage"],
-        "summary": "StartStorage endpoint",
-        "parameters": [
-          {
-            "type": "string",
-            "description": "id",
-            "name": "id",
-            "in": "path",
-            "required": true
-          }
-        ],
-        "responses": {}
-      }
-    },
-    "/storage/{id}/stop": {
-      "post": {
-        "description": "StopStorage endpoint",
-        "consumes": ["application/json"],
-        "produces": ["application/json"],
-        "tags": ["Storage"],
-        "summary": "StopStorage endpoint",
-        "parameters": [
-          {
-            "type": "string",
-            "description": "id",
-            "name": "id",
-            "in": "path",
-            "required": true
-          }
-        ],
         "responses": {}
       }
     },
@@ -2960,21 +2863,6 @@
         },
         "password": {
           "type": "string"
-        },
-        "s3AccessKeyId": {
-          "type": "string"
-        },
-        "s3AccountId": {
-          "type": "string"
-        },
-        "s3Bucket": {
-          "type": "string"
-        },
-        "s3SecretAccessKey": {
-          "type": "string"
-        },
-        "s3Skip": {
-          "type": "boolean"
         }
       }
     },
@@ -3103,9 +2991,6 @@
         },
         "status": {
           "$ref": "#/definitions/models.BackupConfigStatus"
-        },
-        "storageId": {
-          "type": "string"
         },
         "updatedAt": {
           "type": "string"
@@ -3614,6 +3499,9 @@
         "createdAt": {
           "type": "string"
         },
+        "description": {
+          "type": "string"
+        },
         "endpoint": {
           "type": "string"
         },
@@ -3624,6 +3512,9 @@
           "type": "string"
         },
         "projectId": {
+          "type": "string"
+        },
+        "provider": {
           "type": "string"
         },
         "region": {
@@ -3742,72 +3633,6 @@
           "type": "string"
         }
       }
-    },
-    "models.Storage": {
-      "type": "object",
-      "properties": {
-        "accessKey": {
-          "type": "string"
-        },
-        "apiPort": {
-          "type": "integer"
-        },
-        "bucketName": {
-          "type": "string"
-        },
-        "consolePort": {
-          "type": "integer"
-        },
-        "containerId": {
-          "type": "string"
-        },
-        "createdAt": {
-          "type": "string"
-        },
-        "environmentId": {
-          "type": "string"
-        },
-        "externalDns": {
-          "type": "string"
-        },
-        "id": {
-          "type": "string"
-        },
-        "internalDns": {
-          "type": "string"
-        },
-        "name": {
-          "type": "string"
-        },
-        "projectId": {
-          "type": "string"
-        },
-        "secretKey": {
-          "type": "string"
-        },
-        "status": {
-          "$ref": "#/definitions/models.StorageStatus"
-        },
-        "type": {
-          "$ref": "#/definitions/models.StorageType"
-        },
-        "updatedAt": {
-          "type": "string"
-        },
-        "volumePath": {
-          "type": "string"
-        }
-      }
-    },
-    "models.StorageStatus": {
-      "type": "string",
-      "enum": ["running", "stopped", "error"],
-      "x-enum-varnames": ["StorageStatusRunning", "StorageStatusStopped", "StorageStatusError"]
-    },
-    "models.StorageType": {
-      "type": "string",
-      "enum": ["minio", "s3"],
-      "x-enum-varnames": ["StorageTypeMinIO", "StorageTypeS3"]
     },
     "models.SystemStats": {
       "type": "object",
